@@ -23,8 +23,6 @@ import org.elasticsearch.common.xcontent.XContentParserUtils;
 import org.elasticsearch.index.store.StoreFileMetadata;
 
 import java.io.IOException;
-import java.util.ArrayList;
-import java.util.Collections;
 import java.util.List;
 import java.util.stream.IntStream;
 
@@ -379,7 +377,7 @@ public class BlobStoreIndexShardSnapshot implements ToXContentFragment {
         assert indexVersion >= 0;
         this.snapshot = snapshot;
         this.indexVersion = indexVersion;
-        this.indexFiles = Collections.unmodifiableList(new ArrayList<>(indexFiles));
+        this.indexFiles = org.elasticsearch.core.List.copyOf(indexFiles);
         this.startTime = startTime;
         this.time = time;
         this.incrementalFileCount = incrementalFileCount;
@@ -516,7 +514,7 @@ public class BlobStoreIndexShardSnapshot implements ToXContentFragment {
         int incrementalFileCount = 0;
         long incrementalSize = 0;
 
-        List<FileInfo> indexFiles = new ArrayList<>();
+        List<FileInfo> indexFiles = null;
         if (parser.currentToken() == null) { // fresh parser? move to the first token
             parser.nextToken();
         }
@@ -545,9 +543,7 @@ public class BlobStoreIndexShardSnapshot implements ToXContentFragment {
                 }
             } else if (token == XContentParser.Token.START_ARRAY) {
                 if (PARSE_FILES.match(currentFieldName, parser.getDeprecationHandler())) {
-                    while ((parser.nextToken()) != XContentParser.Token.END_ARRAY) {
-                        indexFiles.add(FileInfo.fromXContent(parser));
-                    }
+                    indexFiles = XContentParserUtils.parseList(parser, FileInfo::fromXContent);
                 } else {
                     XContentParserUtils.throwUnknownField(currentFieldName, parser.getTokenLocation());
                 }
@@ -559,7 +555,7 @@ public class BlobStoreIndexShardSnapshot implements ToXContentFragment {
         return new BlobStoreIndexShardSnapshot(
             snapshot,
             indexVersion,
-            Collections.unmodifiableList(indexFiles),
+            indexFiles == null ? org.elasticsearch.core.List.of() : indexFiles,
             startTime,
             time,
             incrementalFileCount,
